🔥 Remove param gameId in the props

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,6 +7,7 @@
 
 // Page
 @import '~@home/styles/HomePage';
+@import '~@game/styles/GamePageContent';
 
 // Shared styles
 @import '~@shared/BlockContainer/styles/BlockContainer';
