--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,7 +6,7 @@
 @import 'global';
 
 // Page
-@import '~@home/styles/HomePage';
+@import '~@home/styles/HomePageContent';
 @import '~@game/styles/GamePageContent';
 
 // Shared styles
