--- a/src/game/styles/GamePageContent.scss
+++ b/src/game/styles/GamePageContent.scss
@@ -1,4 +1,19 @@
 .page-game {
   height: 100vh;
   width: 100vw;
+
+  .content {
+    padding: to-rem(100) 20%;
+
+    .share-link {
+      .block-container-content {
+        display: flex;
+        flex-direction: row;
+
+        .text-container {
+          margin-right: to-rem(10);
+        }
+      }
+    }
+  }
 }
