--- a/styles/index.scss
+++ b/styles/index.scss
@@ -25,3 +25,4 @@
 @import '~@shared/TextContainer/styles/TextContainer';
 @import '~@shared/Title/styles/Title';
 @import '~@shared/UserCard/styles/UserCard';
+@import '~@shared/Versus/styles/Versus';
