--- a/src/game/styles/GamePageContent.scss
+++ b/src/game/styles/GamePageContent.scss
@@ -1,11 +1,19 @@
-.page-game {
-  height: 100vh;
-  width: 100vw;
+.game-page-content {
+  .header {
+    position: sticky;
+    top: 0;
+  }
 
   .content {
-    display: grid;
-    padding: to-rem(100) 20%;
-    row-gap: to-rem(30);
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding: to-rem(100) 25%;
+
+    .block-container {
+      margin-bottom: to-rem(30);
+      max-width: to-rem(900);
+    }
 
     .share-link {
       .block-container-content {
@@ -19,6 +27,15 @@
         .button:not(.is-disabled) {
           border-color: $color-purple-dark-2;
         }
+      }
+    }
+
+    .players {
+      .block-container-content {
+        align-items: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
       }
     }
   }
