--- a/src/home/styles/HomePageContent.scss
+++ b/src/home/styles/HomePageContent.scss
@@ -1,7 +1,5 @@
-.page-home {
+.home-page-content {
   background: $color-gradient-radial-dark;
-  height: 100vh;
-  width: 100vw;
 
   .button.login {
     z-index: 10;
