--- a/src/shared/BlockContainer/styles/BlockContainer.scss
+++ b/src/shared/BlockContainer/styles/BlockContainer.scss
@@ -1,8 +1,10 @@
 .block-container {
   background-color: $color-purple-dark;
   border-radius: $border-radius;
+  box-sizing: border-box;
   overflow: hidden;
   padding: to-rem(20);
+  width: 100%;
 
   @include bp-phablet {
     padding: to-rem(40);
