--- a/styles/index.scss
+++ b/styles/index.scss
@@ -16,6 +16,7 @@
 @import '~@shared/Board/styles/BoardRow';
 @import '~@shared/Boat/styles/Boat';
 @import '~@shared/Button/styles/Button';
+@import '~@shared/ContentPage/styles/ContentPage';
 @import '~@shared/Field/styles/FieldStructure/FieldContainer';
 @import '~@shared/Field/styles/FieldStructure/FieldError';
 @import '~@shared/Field/styles/FieldStructure/FieldLabel';
@@ -24,6 +25,7 @@
 @import '~@shared/Icon/styles/Icon';
 @import '~@shared/Icon/styles/IconLoader';
 @import '~@shared/Image/styles/Image';
+@import '~@shared/Layout/styles/Layout';
 @import '~@shared/Level/styles/Level';
 @import '~@shared/Modal/styles/BehindOverlay';
 @import '~@shared/Modal/styles/Modal';
