🚚 Move in GameSettings

--- a/src/game/styles/GameSettings.scss
+++ b/src/game/styles/GameSettings.scss
@@ -1,9 +1,4 @@
-.game-page-content {
-  .header {
-    position: sticky;
-    top: 0;
-  }
-
+.game-settings {
   .content {
     align-items: center;
     display: flex;
