--- a/src/home/styles/HomePageContent.scss
+++ b/src/home/styles/HomePageContent.scss
@@ -18,11 +18,11 @@
   }
 
   .content {
-    @include center-element;
-
     align-items: center;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    min-height: 100vh;
 
     .content-logo {
       height: 30vh;
