--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,7 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   background-color: $color-purple-dark-2;
-  box-sizing: border-box;
   color: $color-white;
   font-family: $font-name-roboto, sans-serif;
   user-select: none;
