--- a/src/shared/Versus/styles/Versus.scss
+++ b/src/shared/Versus/styles/Versus.scss
@@ -1,26 +1,26 @@
-.container-versus{
-    display: flex;
-    background-color: #A452DA;
+.container-versus {
+  display: flex;
 }
+
 .versus {
-    border-radius: 50%;
-    width: 20px;
-    padding: 10px;
-    background-color: #25143C;
-    font-weight: bold;
+  border-radius: 50%;
+  width: 20px;
+  padding: 10px;
+  background-color: #b8a5d1;
+  font-weight: bold;
 }
 
 .container-versus::before {
-    content: "- - - -";
-    color: #25143C;
-    font-weight: bold;
-    margin-right: 8px;
-    transform: translate(4px, 10px);
+  content: "- - - -";
+  color: #25143c;
+  font-weight: bold;
+  margin-right: 8px;
+  transform: translate(4px, 10px);
 }
 
-.container-versus:after {
-    content: "- - - -";
-    color: #25143C;
-    font-weight: bold;
-    transform: translate(4px, 10px);
-  }
+.container-versus::after {
+  content: "- - - -";
+  color: #25243c;
+  font-weight: bold;
+  transform: translate(4px, 10px);
+}
