:wastebasket: clear homepage

--- a/src/shared/Versus/styles/Versus.scss
+++ b/src/shared/Versus/styles/Versus.scss
@@ -11,7 +11,7 @@
 }
 
 .container-versus::before {
-  content: "- - - -";
+  content: '- - - -';
   color: #25143c;
   font-weight: bold;
   margin-right: 8px;
@@ -19,7 +19,7 @@
 }
 
 .container-versus::after {
-  content: "- - - -";
+  content: '- - - -';
   color: #25243c;
   font-weight: bold;
   transform: translate(4px, 10px);
