--- a/src/shared/Board/styles/BoardCell.scss
+++ b/src/shared/Board/styles/BoardCell.scss
@@ -1,18 +1,36 @@
 .board-cell {
   align-items: center;
-  background-color: $color-purple-dark;
   display: flex;
   flex: 1;
   justify-content: center;
-  outline: to-rem(1) solid $color-purple;
+  border: to-rem(1) solid $color-purple;
   overflow: hidden;
+  padding: 0;
+  position: relative;
 
   &.board-cell--miss::after {
     background-color: $color-purple;
     border-radius: 50%;
     content: '';
     height: 0;
+    margin: 10%;
     padding-top: 40%;
     width: 40%;
+  }
+
+  &.board-cell--hit {
+    &::before {
+      background-color: rgba($color-purple-dark, 0.8);
+      content: '';
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+    }
+
+    .icon {
+      z-index: 1;
+    }
   }
 }
