--- a/src/shared/Board/styles/BoardCell.scss
+++ b/src/shared/Board/styles/BoardCell.scss
@@ -33,4 +33,21 @@
       z-index: 1;
     }
   }
+
+  &.is-active:not(.is-disabled) {
+    &:not(.board-cell--hit),
+    &:not(.board-cell--miss) {
+      cursor: pointer;
+
+      &:hover::before {
+        background-color: rgba($color-white, 0.05);
+        content: '';
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+      }
+    }
+  }
 }
