--- a/styles/index.scss
+++ b/styles/index.scss
@@ -13,6 +13,7 @@
 @import '~@shared/Board/styles/Board';
 @import '~@shared/Board/styles/BoardCell';
 @import '~@shared/Board/styles/BoardRow';
+@import '~@shared/Boat/styles/Boat';
 @import '~@shared/Button/styles/Button';
 @import '~@shared/Field/styles/FieldStructure/FieldContainer';
 @import '~@shared/Field/styles/FieldStructure/FieldError';
