--- a/src/shared/Boat/styles/Boat.scss
+++ b/src/shared/Boat/styles/Boat.scss
@@ -2,6 +2,10 @@
   position: absolute;
   pointer-events: none;
 
+  &.boat--horizontal {
+    rotate: -90deg;
+  }
+
   .boat-image {
     height: 100%;
     width: 100%;
