🚀 Init Item component

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -30,6 +30,7 @@
 @import '~@shared/Icon/styles/Icon';
 @import '~@shared/Icon/styles/IconLoader';
 @import '~@shared/Image/styles/Image';
+@import '~@shared/Item/styles/Item';
 @import '~@shared/Layout/styles/Layout';
 @import '~@shared/Level/styles/Level';
 @import '~@shared/Modal/styles/BehindOverlay';
