--- a/src/shared/Item/styles/Item.scss
+++ b/src/shared/Item/styles/Item.scss
@@ -1,40 +1,46 @@
-.item {
-  background-color: grey;
-  width: 100px;
-  height: 100px;
-  border-radius: 6px;
+.item{
+    background-color: $color-purple-dark-2;
+    width: to-rem(100);
+    height: to-rem(100);
+    border-radius: $border-radius;
 
-  &.has-orange-border {
-    border: 3px solid $color-orange;
-  }
-
-  .img {
-    &.is-locked,
-    &.is-disabled {
-      -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-      filter: grayscale(100%);
+    &.is-selected {
+        border: 3px solid $color-orange;
     }
-  }
 
-  .pin {
-    width: 30px;
-    height: 30px;
-    position: relative;
-    left: 87px;
-    bottom: 10px;
-    text-align: center;
-    vertical-align: middle;
-    display: table-cell;
-
-    &.not-locked {
-      &::before {
-        @include light-reflection;
-      }
-
-      background-color: $color-orange;
-      border-radius: 50%;
-      border: 1px $color-brown solid;
-      box-shadow: inset 0 $inset-shadow $color-yellow, inset 0 - $inset-shadow $color-orange-dark;
+    &.is-disabled, &.is-locked{
+        .item-image{
+            -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+            filter: grayscale(100%);
+        }
     }
-  }
+
+    .item-lock{
+        width: to-rem(30);
+        height: to-rem(30);
+        position: relative;
+        left: to-rem(87);
+        bottom: to-rem(10);
+    }
+
+    .item-badge{
+
+        &::before {
+            @include light-reflection;
+        }
+
+        width: to-rem(30);
+        height: to-rem(30);
+        position: relative;
+        left: to-rem(87);
+        bottom: to-rem(10);
+        text-align: center;
+        vertical-align: middle;
+        display: table-cell;
+        color: $color-brown;
+        background-color: $color-orange;
+        border-radius: 50%;
+        border: 1px $color-brown solid;
+        box-shadow: inset 0 $inset-shadow $color-yellow, inset 0 - $inset-shadow $color-orange-dark;
+    }
 }
