:lipstick: init styles

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -24,6 +24,7 @@
 @import '~@shared/Icon/styles/IconLoader';
 @import '~@shared/Image/styles/Image';
 @import '~@shared/Level/styles/Level';
+@import '~@shared/Link/styles/Link';
 @import '~@shared/Modal/styles/BehindOverlay';
 @import '~@shared/Modal/styles/Modal';
 @import '~@shared/TextContainer/styles/TextContainer';
