--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,7 +6,8 @@
 @import 'global';
 
 // Page
-@import '~@home/styles/HomePage';
+@import '~@home/styles/HomePageContent';
+@import '~@game/styles/GameSettingsView';
 
 // Shared styles
 @import '~@shared/BlockContainer/styles/BlockContainer';
@@ -15,6 +16,7 @@
 @import '~@shared/Board/styles/BoardRow';
 @import '~@shared/Boat/styles/Boat';
 @import '~@shared/Button/styles/Button';
+@import '~@shared/ContentPage/styles/ContentPage';
 @import '~@shared/Field/styles/FieldStructure/FieldContainer';
 @import '~@shared/Field/styles/FieldStructure/FieldError';
 @import '~@shared/Field/styles/FieldStructure/FieldLabel';
@@ -23,6 +25,7 @@
 @import '~@shared/Icon/styles/Icon';
 @import '~@shared/Icon/styles/IconLoader';
 @import '~@shared/Image/styles/Image';
+@import '~@shared/Layout/styles/Layout';
 @import '~@shared/Level/styles/Level';
 @import '~@shared/Modal/styles/BehindOverlay';
 @import '~@shared/Modal/styles/Modal';
