--- a/src/shared/Versus/styles/Versus.scss
+++ b/src/shared/Versus/styles/Versus.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   padding: 0 to-rem(60);
+  position: relative;
 
   &::before {
     border-bottom: to-rem(3) dashed $color-purple-dark-2;
