--- a/src/game/styles/GamePlacingBoatsView.scss
+++ b/src/game/styles/GamePlacingBoatsView.scss
@@ -1,1 +1,6 @@
-
+.game-placing-boats {
+  .title-indication {
+    // FIXME: temporary marge, add un specific class/component for content page
+    margin: to-rem(50) 0 to-rem(40);
+  }
+}
