--- a/src/game/styles/GamePlacingBoatsView.scss
+++ b/src/game/styles/GamePlacingBoatsView.scss
@@ -3,4 +3,27 @@
     // FIXME: temporary marge, add un specific class/component for content page
     margin: to-rem(50) 0 to-rem(40);
   }
+
+  .boats-placement {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .button-random-boats {
+    margin: to-rem(10) auto 0;
+  }
+
+  .button-ready {
+    margin: to-rem(50) auto 0;
+  }
+
+  .rival-indication {
+    @include font-text-small;
+
+    opacity: 0.7;
+    font-style: italic;
+    text-align: center;
+  }
 }
