--- a/src/shared/Board/styles/Board.scss
+++ b/src/shared/Board/styles/Board.scss
@@ -12,7 +12,7 @@
   }
 
   .board-table {
-    @include fixed-size(400px);
+    @include fixed-size(600);
 
     border-collapse: collapse;
     border-spacing: 0;
