--- a/src/shared/Board/styles/Board.scss
+++ b/src/shared/Board/styles/Board.scss
@@ -1,4 +1,5 @@
 .board {
+  @include fixed-size(to-rem(600));
   background-color: $color-purple-dark;
   border-radius: $border-radius;
   display: inline-block;
@@ -12,10 +13,10 @@
   }
 
   .board-table {
-    @include fixed-size(to-rem(600));
-
     border-collapse: collapse;
     border-spacing: 0;
+    height: 100%;
+    width: 100%;
   }
 
   .board-body {
