--- a/styles/index.scss
+++ b/styles/index.scss
@@ -11,6 +11,7 @@
 // Game
 @import '~@game/styles/GameOneVersusOne/GamePlacingBoatsView';
 @import '~@game/styles/GameOneVersusOne/GameSettingsView';
+@import '~@game/styles/WaitingForTheHost';
 
 // Boat
 @import '~@boat/styles/Boat';
