Create page for boats placement (#32)
* 🍱 Add temporary images

* 🚀 PlayersCards component

* 🚀 TitleIndication component

* 💄 Deplace styles

* 🩹 Fix props

* 🚧 WIP

* 💄 Fix size board

* 🩹 Fix model

* 🎨 Clean structure

* 🩹 Fix selectGamePlayers

* 🚀 Hide sharelink for the rival

* 📝 Update team members

* 🍱 Add boats image

* 🚧 WIP

* 💄 Format css

* 🚨 Fix lint

* 🚀 Check boat position in the board

* 🚀 Place random boats

* 🚀 Start hasBoatsSafetyZone feature

* 🚧 WIP

* 🚧 WIP

* 🚧 WIP

* 🚧 WIP

* 🚧 WIP

* 💄 Error boat on rotation

* 🚧 Boat rotation

* 🐛 Fix boats rotation

* 🩹 Fix some bug

* 🚀 Add parser

* 🎨 Rename property

* 🔥 Remove unvalidate boats

* 👽️ Settings received in game created

* 💡 Add comment

* 🎨 Better get instance

* 🚀 Parsed authorized fleet

* 🚚 Move component Boat in boat domain

* 🔥 Remove code

* 🏷️ Add damageArea in Weapon

* 🎨 Clean import

* 🏷️ Update tmp model

* 🚀 Parsers

* 🚨 Fix constant

* 🎨 Rename model

* 🚨 Fix lint

* 💡 Add comment

* 💡 Add comment

* 🎨 Rename selectors

* 🩹 Fix parseAuthorizedFleet

* 🏷️ Update IntRange model

* 🚀 Add parseInt method in NumberHelpers

* 🎨 Clean sort properties

* 🚀 Parse game state

* 🎨 Clean actions reducer

* 🚀 Add event game already created

* 💡 Add comment

* 🚀 Parse game board boats for API

* 🎨 Change wording admin to host

* 🔥 Remove line

* 👽️ Fix boat size properties

* 🚀 Closed room

* 🚀 Leave room

* ⚡️ DeepClone function

* 🔨 Prettier check all files

* 🎨 End line Versus component

* 🚨 Fix error

* 💄 Reduce size board

* 💄 Header z-index

* 🔥 Remove ContentPage

* 💄 Margin bottom for TitleIndication

* 💄 Global styles

* 🚀 PageContainer component

* 🚚 Move into folder GameOneVersusOne

* 💄 Padding page container content

* 💄 Styles

* 🚨 Fix styles lint

* 🩹 Title header priority

* 🚀 WaitingForTheHost component

* 🏷️ Update typ

--- a/src/shared/Board/styles/Board.scss
+++ b/src/shared/Board/styles/Board.scss
@@ -1,4 +1,6 @@
 .board {
+  @include fixed-size(to-rem(500));
+
   background-color: $color-purple-dark;
   border-radius: $border-radius;
   display: inline-block;
@@ -12,35 +14,35 @@
   }
 
   .board-table {
-    @include fixed-size(400px);
-
     border-collapse: collapse;
     border-spacing: 0;
-  }
-
-  .board-body {
-    display: flex;
-    flex-direction: column;
     height: 100%;
     width: 100%;
 
-    .board-row:first-child {
-      .board-cell:first-child {
-        border-radius: $border-radius 0 0 0;
+    .board-body {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      width: 100%;
+
+      .board-row:first-child {
+        .board-cell:first-child {
+          border-radius: $border-radius 0 0 0;
+        }
+
+        .board-cell:last-child {
+          border-radius: 0 $border-radius 0 0;
+        }
       }
 
-      .board-cell:last-child {
-        border-radius: 0 $border-radius 0 0;
-      }
-    }
+      .board-row:last-child {
+        .board-cell:first-child {
+          border-radius: 0 0 0 $border-radius;
+        }
 
-    .board-row:last-child {
-      .board-cell:first-child {
-        border-radius: 0 0 0 $border-radius;
-      }
-
-      .board-cell:last-child {
-        border-radius: 0 0 $border-radius 0;
+        .board-cell:last-child {
+          border-radius: 0 0 $border-radius 0;
+        }
       }
     }
   }
