--- a/src/game/styles/GameOneVersusOne/GameSettingsView.scss
+++ b/src/game/styles/GameOneVersusOne/GameSettingsView.scss
@@ -1,16 +1,19 @@
 .game-settings {
-  .content {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    padding: to-rem(100) 25%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
 
-    .block-container {
-      margin-bottom: to-rem(30);
-      max-width: to-rem(900);
-    }
+  & > .button {
+    margin: 0 auto;
+  }
 
-    .share-link {
+  .block-container {
+    margin-bottom: to-rem(30);
+    max-width: to-rem(900);
+
+    &.share-link {
       .block-container-content {
         display: flex;
         flex-direction: row;
@@ -25,7 +28,7 @@
       }
     }
 
-    .players {
+    &.players {
       .block-container-content {
         align-items: center;
         display: flex;
