--- a/src/shared/Header/styles/Header.scss
+++ b/src/shared/Header/styles/Header.scss
@@ -11,6 +11,7 @@ $header-height-medium: to-rem(120);
   grid-template-columns: 1fr minmax(auto, 40%) 1fr;
   overflow: hidden;
   width: 100%;
+  z-index: 400; // FIXME: z-index variables
 
   @include bp-phablet {
     column-gap: to-rem(20);
@@ -35,6 +36,13 @@ $header-height-medium: to-rem(120);
     color: rgba($color-white, 0.8);
     text-align: center;
     white-space: nowrap;
+  }
+
+  .header-content {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 
   .header-left-side {
