🚚 Move component in weapon domain

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -30,7 +30,6 @@
 @import '~@shared/Icon/styles/Icon';
 @import '~@shared/Icon/styles/IconLoader';
 @import '~@shared/Image/styles/Image';
-@import '~@shared/Item/styles/Item';
 @import '~@shared/Layout/styles/Layout';
 @import '~@shared/Level/styles/Level';
 @import '~@shared/Modal/styles/BehindOverlay';
@@ -41,3 +40,4 @@
 @import '~@shared/Title/styles/TitleIndication';
 @import '~@shared/UserCard/styles/UserCard';
 @import '~@shared/Versus/styles/Versus';
+@import '~@shared/WeaponItem/styles/WeaponItem';
