--- a/styles/index.scss
+++ b/styles/index.scss
@@ -16,6 +16,9 @@
 // Boat
 @import '~@boat/styles/Boat';
 
+// Weapon
+@import '~@weapon/styles/WeaponItem';
+
 // Shared styles
 @import '~@shared/BlockContainer/styles/BlockContainer';
 @import '~@shared/Board/styles/Board';
