--- a/styles/index.scss
+++ b/styles/index.scss
@@ -19,6 +19,7 @@
 
 // Weapon
 @import '~@weapon/styles/WeaponItem';
+@import '~@weapon/styles/WeaponList';
 
 // Shared styles
 @import '~@shared/BlockContainer/styles/BlockContainer';
